# awx

./: .ansible-lint.yml  .babelrc  .bowerrc  .codecov.yml  .coveragerc  .dockerignore  .dput.cf  .editorconfig  .env  .eslintrc  .gitignore  .gitleaks.toml  .jshintrc  .mini-dinstall.cf  .pip-tools.toml  .pylintrc  .readthedocs.yaml  .travis.yml  .yamllint  .zuul.yaml  API_STANDARDS.md  Brocfile.js  CHANGELOG.md  CONTRIBUTING.md  COPYING  DATA_MIGRATION.md  DCO_1_1.md  Gruntfile.js  INSTALL.md  ISSUES.md  ISSUE_TEMPLATE.md  Jenkinsfile  MANIFEST.in  Makefile  Procfile  README.md  SECURITY.md  SETUP.md  TODO.md  Vagrantfile  (+33 more)
.github/: BOTMETA.yml  CODEOWNERS  ISSUE_TEMPLATE.md  LABEL_MAP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_labeler.yml  lock_dev_requirements.py  pr_labeler.yml  triage_replies.md
__mocks__/: axios.js
__tests__/: .eslintrc  App.test.jsx  ConditionalRedirect.test.jsx  RootProvider.test.jsx  api.test.js  enzymeHelpers.jsx  enzymeHelpers.test.jsx  index.test.jsx  qs.test.js
acom/: settings.py  urls.py
ansibleworks/: __init__.py  urls.py  wsgi.py
app_setup/: setup.yml
awx/: __init__.py  __main__.py  asgi.py  celery.py  coverage_wsgi.py  devonly.py  insights-analytics-collector  resource_api.py  urls.py  version.py  wsgi.py
awx_collection/: README.md  TESTING.md  all.yaml  bindep.txt  export.yml  export_working_notes.yml  galaxy.yml  galaxy.yml.j2  make_imports_absolute.yml  requirements.txt  setup.cfg  template_galaxy.yml
awx_modules/: README.md  galaxy.yml  galaxy.yml.j2  template_galaxy.yml
awxbench/: Makefile  README.md  awxbench.yml  inventory  requirements.yml  run_loop.yml
awxkit/: .gitignore  MANIFEST.in  README.md  VERSION  requirements.txt  setup.py  tox.ini
config/: ansibleworks.conf  awx-httpd-443.conf  awx-httpd-80.conf  awx-munin-el.conf  awx-munin-ubuntu.conf  awx-munin.conf  awx-nginx.conf  awx-plain.conf  awx.conf  awx_munin_tower_jobs  awx_supervisor.conf  settings.py  wsgi.py  zanata.xml
docs/: CHANGELOG.md  DATA_MIGRATION.md  SETUP.md  _tags.md  ansible_runner_integration.md  api_guide.md  build_awx_image.md  build_system.md  bulk_api.md  capacity.md  clustering.md  collections.md  configuration.md  container_groups.md  cors.md  credential_plugins.md  credentials.md  custom_credential_types.md  custom_virtualenvs.md  debugging.md  execution_environments.md  execution_nodes.md  index.md  (+41 more)
(+14747 files in other folders)
