[metadata]
name = awx
author = Red Hat
author_email = info@ansible.com
version = attr: awx.get_version

[options]
packages =
    awx
zip_safe = False
include_package_data = True

[options.entry_points]
console_scripts =
    awx-manage = awx:manage
awx.plugins =
    conjur = awx_plugins.credentials.conjur:conjur_plugin
    hashivault_kv = awx_plugins.credentials.hashivault:hashivault_kv_plugin
    hashivault_ssh = awx_plugins.credentials.hashivault:hashivault_ssh_plugin
    azure_kv = awx_plugins.credentials.azure_kv:azure_keyvault_plugin
    aim = awx_plugins.credentials.aim:aim_plugin
    centrify_vault_kv = awx_plugins.credentials.centrify_vault:centrify_plugin
    thycotic_dsv = awx_plugins.credentials.dsv:dsv_plugin
    thycotic_tss = awx_plugins.credentials.tss:tss_plugin
    aws_secretsmanager_credential = awx_plugins.credentials.aws_secretsmanager:aws_secretmanager_plugin
